<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_profile"
            layout="@layout/toolbar_back_title_exit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_profile"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_my_profile"
            android:fontFamily="@font/sf_bold_700"
            android:textSize="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            android:textAlignment="center"
            android:textColor="@color/grey_900"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProfile"/>

        <TextView
            android:id="@+id/tvEmailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="qwrt@gmail.com"
            android:fontFamily="@font/sf_regular_400"
            android:textSize="14dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/grey_400"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="24dp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmailUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/btnUserDataEdit"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_data"
                    android:fontFamily="@font/sf_medium_500"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp"
                    android:layout_gravity="center_vertical"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_button_next"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:backgroundTint="@color/grey_300"
                android:background="@drawable/divider_1dp_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_your_password"
                    android:fontFamily="@font/sf_medium_500"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_button_next"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:backgroundTint="@color/grey_300"
                android:background="@drawable/divider_1dp_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/btnChangeLanguage"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="@string/profile_language"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvSelectedLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_edit"
                    android:fontFamily="@font/sf_semibold_600"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp"
                    android:layout_marginEnd="14dp"
                    android:layout_gravity="center_vertical"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_button_next"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:backgroundTint="@color/grey_300"
                android:background="@drawable/divider_1dp_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/btnNightModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
                    android:fontFamily="@font/sf_medium_500"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp"
                    android:layout_gravity="center_vertical"/>
                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchDayNight"
                    android:layout_width="67dp"
                    android:layout_height="36dp"
                    android:checked="true"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/primary_500"
                    app:thumbTint="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>