<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileData.PersonalDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_profile"
            layout="@layout/toolbar_back_title_personal_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_profile">

            <LinearLayout
                android:id="@+id/tvUserData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameUserData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/Full_name"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvNameUserData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="Тайбасова Ажар Қосымқызы"
                    android:textColor="@color/grey_900"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvEmailData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/emailUserData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/Email"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvEmailUserData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="Azhar@gmail.com"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvUniversityData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/University"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvUniversityUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="Л.Н.Гумилев атындағы Еуразия ұлттық университеті"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvProgramData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="Білім беру бағдарламасы"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvProgramUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="Ақпараттық жүйелер"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvCourseData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/Course"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvCourseUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="4"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvGroupData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/Group"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvGroupUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="B057-6103-21-07"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvStatusData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/Status"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvStatusUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="Студент"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvNumberData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/Mobile_phone"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvNumberUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="string"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/tvBirthData"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold_700"
                    android:text="@string/Date_of_birth"
                    android:textColor="@color/grey_400"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/tvBirthUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium_500"
                    android:text="Дата рождения"
                    android:textColor="@color/grey_800"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1dp_grey"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />




        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>